--- a/p8105_hw3_ep2899.md
+++ b/p8105_hw3_ep2899.md
@@ -5,19 +5,39 @@ p8105\_hw3\_ep2899
 library(tidyverse)
 ```
 
-    ## -- Attaching packages --------------------------------------------------------- tidyverse 1.3.0 --
+    ## -- Attaching packages ----------------------------------------------------------------------------------------- tidyverse 1.3.0 --
 
     ## v ggplot2 3.3.2     v purrr   0.3.4
     ## v tibble  3.0.3     v dplyr   1.0.2
     ## v tidyr   1.1.2     v stringr 1.4.0
     ## v readr   1.3.1     v forcats 0.5.0
 
-    ## -- Conflicts ------------------------------------------------------------ tidyverse_conflicts() --
+    ## -- Conflicts -------------------------------------------------------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
 ``` r
 library(p8105.datasets)
+
+
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = 0.6,
+  out.width= "90%"
+)
+
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+          
+
+options(
+    ggplot2.continuous.colour= "viridis" ,
+    ggplot2.continuous.fill = "viridis"
+)        
+
+
+scale_colour_discrete = scale_color_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 ```
 
 \#\#\#Problem 0
@@ -73,7 +93,7 @@ instacart %>%
   theme(axis.text.x = element_text(angle =90, vjust = 0.5, hjust =1))
 ```
 
-![](p8105_hw3_ep2899_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+<img src="p8105_hw3_ep2899_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
 
 Let’s make a table\!
 
@@ -106,7 +126,7 @@ Apples vs ice cream..
 instacart %>% 
   filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>% 
   group_by(product_name, order_dow) %>% 
-  summarize(mean_hour = mean(order_hour_of_day))
+  summarize(mean_hour = mean(order_hour_of_day)) 
 ```
 
     ## `summarise()` regrouping output by 'product_name' (override with `.groups` argument)
@@ -129,3 +149,119 @@ instacart %>%
     ## 12 Pink Lady Apples         4      11.6
     ## 13 Pink Lady Apples         5      12.8
     ## 14 Pink Lady Apples         6      11.9
+
+\#\#Problem 2 Load, Tidy, Wrangle Data
+
+``` r
+accel_df=
+ read_csv("./data/accel_data.csv") %>% 
+  pivot_longer(
+    activity.1:activity.1440, 
+    names_to = "minute", 
+    names_prefix = "activity.",
+    values_to = "activity_counts"
+  ) %>% 
+  mutate(
+    day= recode(day, Monday = "Weekday", Tuesday = "Weekday" , Wednesday = "Weekday" , Thursday = "Weekday" , Friday= "Weekday",                 Saturday = "Weekend", Sunday = "Weekend")
+  )
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_double(),
+    ##   day = col_character()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+``` r
+accel_df %>% 
+    mutate(minute = as.numeric(minute)) %>% 
+  count(minute)
+```
+
+    ## # A tibble: 1,440 x 2
+    ##    minute     n
+    ##     <dbl> <int>
+    ##  1      1    35
+    ##  2      2    35
+    ##  3      3    35
+    ##  4      4    35
+    ##  5      5    35
+    ##  6      6    35
+    ##  7      7    35
+    ##  8      8    35
+    ##  9      9    35
+    ## 10     10    35
+    ## # ... with 1,430 more rows
+
+Describe dataset: This accel\_df contains 4 different numeric variables
+(week, day\_id, minute of day, and activity counts) and 1 character
+variable (day). There are a total of 1,440 separate minute of day
+observations.
+
+Aggregate across minutes to create a total activity variable for each
+day, and create a table showing these totals. Are any trends apparent?
+
+``` r
+accel_df %>% 
+group_by(day, day_id) %>% 
+  summarize(activity_sum = sum(activity_counts)) %>% 
+   mutate(rank = min_rank(desc(day_id))) %>% 
+  arrange(day_id, rank) %>% 
+  knitr::kable()
+```
+
+    ## `summarise()` regrouping output by 'day' (override with `.groups` argument)
+
+| day     | day\_id | activity\_sum | rank |
+| :------ | ------: | ------------: | ---: |
+| Weekday |       1 |     480542.62 |   25 |
+| Weekday |       2 |      78828.07 |   24 |
+| Weekend |       3 |     376254.00 |   10 |
+| Weekend |       4 |     631105.00 |    9 |
+| Weekday |       5 |     355923.64 |   23 |
+| Weekday |       6 |     307094.24 |   22 |
+| Weekday |       7 |     340115.01 |   21 |
+| Weekday |       8 |     568839.00 |   20 |
+| Weekday |       9 |     295431.00 |   19 |
+| Weekend |      10 |     607175.00 |    8 |
+| Weekend |      11 |     422018.00 |    7 |
+| Weekday |      12 |     474048.00 |   18 |
+| Weekday |      13 |     423245.00 |   17 |
+| Weekday |      14 |     440962.00 |   16 |
+| Weekday |      15 |     467420.00 |   15 |
+| Weekday |      16 |     685910.00 |   14 |
+| Weekend |      17 |     382928.00 |    6 |
+| Weekend |      18 |     467052.00 |    5 |
+| Weekday |      19 |     371230.00 |   13 |
+| Weekday |      20 |     381507.00 |   12 |
+| Weekday |      21 |     468869.00 |   11 |
+| Weekday |      22 |     154049.00 |   10 |
+| Weekday |      23 |     409450.00 |    9 |
+| Weekend |      24 |       1440.00 |    4 |
+| Weekend |      25 |     260617.00 |    3 |
+| Weekday |      26 |     340291.00 |    8 |
+| Weekday |      27 |     319568.00 |    7 |
+| Weekday |      28 |     434460.00 |    6 |
+| Weekday |      29 |     620860.00 |    5 |
+| Weekday |      30 |     389080.00 |    4 |
+| Weekend |      31 |       1440.00 |    2 |
+| Weekend |      32 |     138421.00 |    1 |
+| Weekday |      33 |     549658.00 |    3 |
+| Weekday |      34 |     367824.00 |    2 |
+| Weekday |      35 |     445366.00 |    1 |
+
+Make a single-panel plot that shows the 24-hour activity time courses
+for each day and use color to indicate day of the week. Describe in
+words any patterns or conclusions you can make based on this graph.
+
+\#\#Problem 3 year-month=day, separate function to get 3 variables,
+convert to month descriptor but not required reasonable units for
+temperature- NOAA description? 10th of degree C, just degree C most
+commonly observed values? average max T in Jan, July each station/yrs,
+group by (station, year, month) and summarize (avg max T) avg max T over
+years separately for each station FACET for 2 panel plots is Jan warmer
+in 2010 vs 1980? tmax vs tmin (contour or bin or hex) + distribution of
+snowfall values, filter first then, box, violin, ridge to demonstrate
+distribution via patchwork
