--- a/p8105_hw3_ep2899.md
+++ b/p8105_hw3_ep2899.md
@@ -5,14 +5,14 @@ p8105\_hw3\_ep2899
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ----------------------------------------------------------- tidyverse 1.3.0 --
+    ## -- Attaching packages --------------------------------------------------------------- tidyverse 1.3.0 --
 
     ## v ggplot2 3.3.2     v purrr   0.3.4
     ## v tibble  3.0.3     v dplyr   1.0.2
     ## v tidyr   1.1.2     v stringr 1.4.0
     ## v readr   1.3.1     v forcats 0.5.0
 
-    ## -- Conflicts -------------------------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ------------------------------------------------------------------ tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -292,31 +292,6 @@ separate(ny_noaa, date, into = c("year", "month" , "day" ))
 ```
 
 ``` r
-ny_noaa_df %>%   
-mutate(
-    tmin = as.numeric(tmin),
-    tmax = as.numeric(tmax),
-    tmin = tmin/10,
-    tmax= tmax/10
-  )
-```
-
-    ## # A tibble: 2,595,176 x 9
-    ##    id          year  month day    prcp  snow  snwd  tmax  tmin
-    ##    <chr>       <chr> <chr> <chr> <int> <int> <int> <dbl> <dbl>
-    ##  1 US1NYAB0001 2007  11    01       NA    NA    NA    NA    NA
-    ##  2 US1NYAB0001 2007  11    02       NA    NA    NA    NA    NA
-    ##  3 US1NYAB0001 2007  11    03       NA    NA    NA    NA    NA
-    ##  4 US1NYAB0001 2007  11    04       NA    NA    NA    NA    NA
-    ##  5 US1NYAB0001 2007  11    05       NA    NA    NA    NA    NA
-    ##  6 US1NYAB0001 2007  11    06       NA    NA    NA    NA    NA
-    ##  7 US1NYAB0001 2007  11    07       NA    NA    NA    NA    NA
-    ##  8 US1NYAB0001 2007  11    08       NA    NA    NA    NA    NA
-    ##  9 US1NYAB0001 2007  11    09       NA    NA    NA    NA    NA
-    ## 10 US1NYAB0001 2007  11    10       NA    NA    NA    NA    NA
-    ## # ... with 2,595,166 more rows
-
-``` r
 ny_noaa_df %>% 
    group_by(snow) %>% 
   summarize(
@@ -369,48 +344,40 @@ ny_noaa_df %>%
 
     ## Warning: Removed 5931 row(s) containing missing values (geom_path).
 
-<img src="p8105_hw3_ep2899_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
+<img src="p8105_hw3_ep2899_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
 
 Make a two-panel plot showing tmax vs tmin for the full dataset (note
-that a scatterplot may not be the best option)
-
-make a plot showing the distribution of snowfall values greater than 0
-and less than 100 separately by year
-
-``` r
-  filter(ny_noaa_df, snow > 0, snow <= 100)
-```
-
-    ## # A tibble: 172,571 x 9
-    ##    id          year  month day    prcp  snow  snwd  tmax  tmin
-    ##    <chr>       <chr> <chr> <chr> <int> <int> <int> <dbl> <dbl>
-    ##  1 US1NYAB0001 2007  11    17        3     3     0    NA    NA
-    ##  2 US1NYAB0001 2007  11    24        3     3     0    NA    NA
-    ##  3 US1NYAB0001 2007  11    26        8     5    NA    NA    NA
-    ##  4 US1NYAB0001 2007  11    28        8     5     0    NA    NA
-    ##  5 US1NYAB0001 2007  12    01       46    64    64    NA    NA
-    ##  6 US1NYAB0001 2007  12    03      117    13    25    NA    NA
-    ##  7 US1NYAB0001 2007  12    04       15    30    51    NA    NA
-    ##  8 US1NYAB0001 2007  12    05        5     8    51    NA    NA
-    ##  9 US1NYAB0001 2007  12    06        3     5    51    NA    NA
-    ## 10 US1NYAB0001 2007  12    10       46     3    25    NA    NA
-    ## # ... with 172,561 more rows
+that a scatterplot may not be the best option). Make a plot showing the
+distribution of snowfall values greater than 0 and less than 100
+separately by year
 
 ``` r
-library(ggridges)
+tmax_tmin_p=
+ny_noaa_df %>% 
+ggplot(aes(x = tmax, y = tmin, color = id))+
+theme_bw()+
+geom_point(alpha=0.1, col= "red")+
+ggtitle("Contour Plot Tmax v T min")
+theme(plot.title= element_text(hjust = 0.5))+
+labs(x = "tmax" , y = "tmin")
 ```
 
-``` r
-   ny_noaa_df %>% 
-   ggplot(aes(x = year, y = snow, fill=year))+
-   geom_violin(alpha = 0.5)+
-   stat_summary(fun = "median")
-```
-
-    ## Warning: Removed 381221 rows containing non-finite values (stat_ydensity).
-
-    ## Warning: Removed 381221 rows containing non-finite values (stat_summary).
-
-    ## Warning: Removed 30 rows containing missing values (geom_segment).
-
-<img src="p8105_hw3_ep2899_files/figure-gfm/unnamed-chunk-19-1.png" width="90%" />
+    ## List of 3
+    ##  $ plot.title:List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : num 0.5
+    ##   ..$ vjust        : NULL
+    ##   ..$ angle        : NULL
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : NULL
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi FALSE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  $ x         : chr "tmax"
+    ##  $ y         : chr "tmin"
+    ##  - attr(*, "class")= chr [1:2] "theme" "gg"
+    ##  - attr(*, "complete")= logi FALSE
+    ##  - attr(*, "validate")= logi TRUE
