--- a/p8105_hw3_ep2899.md
+++ b/p8105_hw3_ep2899.md
@@ -381,3 +381,30 @@ labs(x = "tmax" , y = "tmin")
     ##  - attr(*, "class")= chr [1:2] "theme" "gg"
     ##  - attr(*, "complete")= logi FALSE
     ##  - attr(*, "validate")= logi TRUE
+
+``` r
+filter(ny_noaa_df, snow > 0, snow <= 100)
+```
+
+    ## # A tibble: 172,571 x 9
+    ##    id          year  month day    prcp  snow  snwd  tmax  tmin
+    ##    <chr>       <chr> <chr> <chr> <int> <int> <int> <dbl> <dbl>
+    ##  1 US1NYAB0001 2007  11    17        3     3     0    NA    NA
+    ##  2 US1NYAB0001 2007  11    24        3     3     0    NA    NA
+    ##  3 US1NYAB0001 2007  11    26        8     5    NA    NA    NA
+    ##  4 US1NYAB0001 2007  11    28        8     5     0    NA    NA
+    ##  5 US1NYAB0001 2007  12    01       46    64    64    NA    NA
+    ##  6 US1NYAB0001 2007  12    03      117    13    25    NA    NA
+    ##  7 US1NYAB0001 2007  12    04       15    30    51    NA    NA
+    ##  8 US1NYAB0001 2007  12    05        5     8    51    NA    NA
+    ##  9 US1NYAB0001 2007  12    06        3     5    51    NA    NA
+    ## 10 US1NYAB0001 2007  12    10       46     3    25    NA    NA
+    ## # ... with 172,561 more rows
+
+``` r
+snsnowfall_p=
+  ny_noaa_df %>% 
+   ggplot(aes(x = year, y = snow, fill=year))+
+   geom_violin(alpha = 0.5)+
+   stat_summary(fun = "median")
+```
